cabal-version:   3.0
name:            lang
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
maintainer:      matthunz2@gmail.com
author:          Matt Hunzinger
build-type:      Simple
extra-doc-files: CHANGELOG.md

library
    exposed-modules:
        MyLib
        Parse

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        aeson >=2,
        aeson-pretty >=0.8,
        bytestring >=0.10,
        optparse-applicative >=0.15,
        parsec >=3,
        process >=1.6,
        text >=2

executable lang
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        lang

test-suite lang-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:      -Wall
    build-depends:
        base ^>=4.17.2.1,
        lang
